@@ -1,3 +1,9 @@
+1999-04-01  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* prompter.c (krb5_prompter_posix): Update to use new prompter
+		prototype which takes an extra argument for the window
+		titlebar name.  (From Frank Cusack) [krb5-kdc/662]
+
 Thu Mar 25 18:45:48 1999  Tom Yu  <tlyu@mit.edu>
 
 	* promptusr.c (krb5_os_get_tty_uio): getchar() returns int, not
